--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <img class="element__image" src="./images/elbrus.png" alt="Закат на фоне горы Эльбрус">
       <div class="element__text">
         <p class="element__title">Гора Эльбрус</p> 
-        <a class="element__like"><img src="./images/like.png"></a>
+        <a class="element__like"><img src="./images/like.png" alt="Лайк"></a>
       </div>
      </div>
      <div class="element">
@@ -81,7 +81,7 @@
     <a href="#content" class="popup__area"></a>
     <div class="popup__body">
       <div class="popup__content">
-        <a class="popup__close" href="#content"><img class="popup__close-image" src="./images/Close Icon.png"></a>
+        <a class="popup__close" href="#content"><img class="popup__close-image" src="./images/сloseIcon.png" alt="Крестик"></a>
         <div class="popup__title">Редактировать профиль</div>
         <div class="popup__text">Жак-Ив Кусто</div>
         <div class="popup__text">Исследователь океана</div>
