fixed(css files): fixed small bugs

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="popup popup__full-img">
     <div class="popup__container">
       <button class="popup__close-button" type="reset"></button>
-      <img class="popup__img" src="" alt="">
+      <img class="popup__img" src="#" alt="">
       <p class="popup__description"></p>
     </div>
   </div>
@@ -75,7 +75,7 @@
   <template id="template-elements">
     <div class="element">
       <button class="element__delete-button" type="reset"></button>
-      <img class="element__image" src="" alt="Фото">
+      <img class="element__image" src="#" alt="Фото">
       <div class="element__text"> 
         <p class="element__title">Название картинки</p> 
         <button class="element__like-button" type="submit"></button> 
