--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   </footer>
 
   <!-- Попап редактирования профиля -->
-  <div class="popup popup__username-edit">
+  <div class="popup popup_username-edit">
     <div class="popup__body">
       <button class="popup__close-button" type="reset"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__content popup__form_username-edit" name="popupContent">
+      <form class="popup__content popup__content_username-edit" name="popupContent">
         <input class="popup__text popup__text_username" type="text" name="userName" placeholder="Введите ваше имя">
         <input class="popup__text popup__text_user-position" type="text" name="userPosition" placeholder="Расскажите о себе">
         <button class="popup__submit-button" type="submit">Сохранить</button>
@@ -50,11 +50,11 @@
   </div>
 
   <!-- Попап добавление новой картинки -->
-  <div class="popup popup__card-add">
+  <div class="popup popup_card-add">
     <div class="popup__body">
       <button class="popup__close-button" type="reset"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__content popup__form_card-add" name="popupContent">
+      <form class="popup__content popup__content_card-add" name="popupContent">
         <input class="popup__text popup__text_photo-name" type="text" name="photoName" placeholder="Название">
         <input class="popup__text popup__text_photo-link" type="url" name="link" placeholder="Ссылка на картинку">
       </form>
@@ -63,7 +63,7 @@
   </div>
 
   <!-- Увеличение фото -->
-  <div class="popup popup__full-img">
+  <div class="popup popup_full-img">
     <div class="popup__container">
       <button class="popup__close-button" type="reset"></button>
       <img class="popup__img" src="#" alt="">
