fixed(files): changed scripts names

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       </div> 
     </div> 
   </template>
-  <script src="./script/cards.js" defer></script>
-  <script src="./script/script.js" defer></script>
-  <script src="./script/validate.js" defer></script>
+  <script src="./scripts/index.js" defer></script>
+  <script src="./scripts/cards.js" defer></script>
+  <script src="./scripts/validate.js" defer></script>
 </body>
 </html>
