--- a/index.html
+++ b/index.html
@@ -40,13 +40,46 @@
   <div class="popup popup_username-edit">
     <div class="popup__body">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__content popup__content_username-edit" name="ContentProfileForm" novalidate>
-        <button class="popup__close-button" type="reset"></button>
-        <input id="popup__username" type="text"  name="userName" class="popup__text popup__text_username" minlength="2" maxlength="40" autocomplete="off" placeholder="Введите ваше имя" required>
-        <span id="error-popup__username" class="popup__error-message popup__error-message_hidden"></span>
-        <input id="popup__user-position" type="text"  name="userPosition" class="popup__text popup__text_user-position" minlength="2" maxlength="200" autocomplete="off" placeholder="Расскажите о себе" required>
-        <span id="error-popup__user-position" class="popup__error-message popup__error-message_hidden"></span>
-        <button class="popup__submit-button" type="submit">Сохранить</button>
+      <form
+        name="contentProfileForm"
+        class="popup__content popup__content_username-edit"
+        novalidate>
+        <button
+          type="reset"
+          class="popup__close-button">
+        </button>
+        <input
+          id="popup__username"
+          type="text"
+          name="userName"
+          class="popup__text popup__text_username"
+          minlength="2"
+          maxlength="40"
+          autocomplete="off"
+          placeholder="Введите ваше имя"
+          required>
+        <span
+          id="error-popup__username"
+          class="popup__error-message popup__error-message_hidden">
+        </span>
+        <input
+          id="popup__user-position"
+          type="text"
+          name="userPosition"
+          class="popup__text popup__text_user-position"
+          minlength="2"
+          maxlength="200"
+          autocomplete="off"
+          placeholder="Расскажите о себе"
+          required>
+        <span
+          id="error-popup__user-position"
+          class="popup__error-message popup__error-message_hidden">
+        </span>
+        <button
+          type="submit"
+          class="popup__submit-button">Cохранить
+      </button>
       </form>
     </div>
   </div>
@@ -55,13 +88,43 @@
   <div class="popup popup_card-add">
     <div class="popup__body">
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__content popup__content_card-add" name="ContentNewCardForm" novalidate>
-        <button class="popup__close-button" type="reset"></button>
-        <input id="popup__photo-name" type="text"  name="photoName" class="popup__text popup__text_photo-name" minlength="2" maxlength="30" autocomplete="off" placeholder="Название" required>
-        <span id="error-popup__photo-name" class="popup__error-message popup__error-message_hidden"></span>
-        <input id="popup__photo-link" type="url"  name="link" class="popup__text popup__text_photo-link" autocomplete="off" placeholder="Ссылка на картинку" required>
-        <span id="error-popup__photo-link" class="popup__error-message popup__error-message_hidden"></span>
-        <button class="popup__submit-button" type="submit">Создать</button>
+      <form
+        name="contentNewCardForm"
+        class="popup__content popup__content_card-add"
+        novalidate>
+        <button
+          type="reset"
+          class="popup__close-button">
+        </button>
+        <input
+          id="popup__photo-name"
+          type="text"
+          name="photoName"
+          class="popup__text popup__text_photo-name"
+          minlength="2" maxlength="30"
+          autocomplete="off"
+          placeholder="Название"
+          required>
+        <span
+          id="error-popup__photo-name"
+          class="popup__error-message popup__error-message_hidden">
+        </span>
+        <input
+          id="popup__photo-link"
+          type="url"
+          name="link"
+          class="popup__text popup__text_photo-link"
+          autocomplete="off"
+          placeholder="Ссылка на картинку"
+          required>
+        <span
+          id="error-popup__photo-link"
+          class="popup__error-message popup__error-message_hidden">
+        </span>
+        <button
+          type="submit"
+          class="popup__submit-button">Создать
+        </button>
       </form>
     </div>
   </div>
@@ -86,8 +149,9 @@
       </div> 
     </div> 
   </template>
-  <script src="./scripts/cards.js" defer></script>
-  <script src="./scripts/index.js" defer></script>
-  <script src="./scripts/validate.js" defer></script>
+  <script src="./scripts/initialCards.js" type="module" defer></script>
+  <script src="./scripts/index.js" type="module" defer></script>
+  <script src="./scripts/formValidator.js" type="module" defer></script>
+  <script src="./scripts/card.js" type="module" defer></script>
 </body>
 </html>
