--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
       </div> 
     </div> 
   </template>
-  <script src="./scripts/initialCards.js" type="module" defer></script>
-  <script src="./scripts/index.js" type="module" defer></script>
-  <script src="./scripts/formValidator.js" type="module" defer></script>
-  <script src="./scripts/card.js" type="module" defer></script>
+  <script src="./scripts/initialCards.js" type="module"></script>
+  <script src="./scripts/index.js" type="module"></script>
+  <script src="./scripts/formValidator.js" type="module"></script>
+  <script src="./scripts/card.js" type="module"></script>
 </body>
 </html>
