--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   </div>
 
   <!-- Увеличение фото -->
-  <div class="popup popup__full-img">
+  <div class="popup popup_full-img">
     <div class="popup__container popup__container_full-img">
       <button class="popup__close-button popup__close-button_full-img" type="reset"></button>
       <img class="popup__img" src="#" alt="">
