fixed(js): chang the way of working submit buttons

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
   <!-- Попап редактирования профиля -->
   <div class="popup popup_username-edit">
     <div class="popup__body">
+      <button
+        type="button"
+        class="popup__close-button">
+      </button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form
         name="contentProfileForm"
         class="popup__content popup__content_username-edit"
         novalidate>
-        <button
-          type="reset"
-          class="popup__close-button">
-        </button>
         <input
           id="popup__username"
           type="text"
@@ -87,15 +87,15 @@
   <!-- Попап добавление новой картинки -->
   <div class="popup popup_card-add">
     <div class="popup__body">
+      <button
+        type="button"
+        class="popup__close-button">
+      </button>
       <h2 class="popup__title">Новое место</h2>
       <form
         name="contentNewCardForm"
         class="popup__content popup__content_card-add"
         novalidate>
-        <button
-          type="reset"
-          class="popup__close-button">
-        </button>
         <input
           id="popup__photo-name"
           type="text"
